--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   {% include skills.html %}
   {% include experience.html %}
   <!-- {% include featured-projects.html %} -->
-  {% include other-projects.html %}
+  <!-- {% include other-projects.html %} -->
   {% include footer.html %}
   {% include top-button.html %}
 </div>
