--- a/CSCI571-webtech/assignment1/page1.html
+++ b/CSCI571-webtech/assignment1/page1.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="navmenu">
                     <ul class="menu">
-                        <li><a class="item_active" href="page1.html">Home</a></li>
+                        <li><a class="item_active" href="page2.html#home" target="_blank">Home</a></li>
                         <li><a class="item_inactive" href="page2.html#services" target="_blank">Services</a></li>
                         <li><a class="item_inactive" href="page2.html#about" target="_blank">About</a></li>
                         <li><a class="item_inactive" href="page2.html#gallery" target="_blank">Gallery</a></li>
@@ -101,10 +101,10 @@
                     <div class="block">
                         <p class="footer_text">Tel: 123-555-1212</p>
                         <p class="footer_text">Fax: 123-555-1212</p>
-                        <p class="footer_text">info@mainevents.com</p>
+                        <p class="footer_text">info@mainevents.c<br>om</p>
                     </div>
                     <div class="sep"></div>
-                    <div class="block">
+                    <div class="block event">
                         <p class="footer_text">©2023 by Main Events.</p>
                     </div>
                     <div class="book_block">
