--- a/fd45fh17.html
+++ b/fd45fh17.html
@@ -25,8 +25,9 @@
       <td></td>
     </tr>
     <tr>
-      <td><a href="ScrambleThisName.html">Link to Assignment #2</a></td>
-      <td><a href="ScrambleThisName.html">Link to Assignment #2 Cloud</a></td>
+      <td><a href="https://my-webtech-assignment2.wl.r.appspot.com/">Link to Assignment #2</a></td>
+      <td><a href="https://my-webtech-assignment2.wl.r.appspot.com/company-profile?ticker=TSLA">Link to Assignment #2
+          Cloud</a></td>
     </tr>
     <tr>
       <td><a href="ScrambleThisName.html">Link to Assignment #3</a></td>
