Update fd45fh17.html with HW4 link

--- a/fd45fh17.html
+++ b/fd45fh17.html
@@ -35,7 +35,7 @@
     </tr>
     <tr>
       <td></td>
-      <td><a href="ScrambleThisName.html">Link to Assignment #4 Cloud</a></td>
+      <td><a href="https://stocksearch-webtech4.appspot.com/api/stock/quote?symbol=AAPL">Link to Assignment #4 Cloud</a></td>
     </tr>
   </table>
 </body>
